# aps3e

./: .gitignore
.github/workflows/: android-build.yml
app/: build.gradle.bak
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aps3e.cpp  aps3e_config.cpp  aps3e_emu.cpp  aps3e_pad_thread.cpp  aps3e_rp3_impl.cpp  aps3e_util.cpp  emulator.cpp  emulator.h  glsl2spv.h
app/src/main/cpp/rpcs3/: CMakeLists.txt
app/src/main/cpp/rpcs3/Utilities/: Thread.cpp
app/src/main/cpp/rpcs3/rpcs3/Crypto/: unpkg.cpp  unpkg.h
app/src/main/cpp/rpcs3/rpcs3/Emu/: System.cpp
app/src/main/cpp/rpcs3/rpcs3/Emu/Cell/Modules/: sceNpTrophy.cpp
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/: RSXThread.cpp  rsx_cache.h  rsx_utils.h
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/Program/: SPIRVCommon.cpp
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/VK/: VKPFNTable.h
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/VK/vkutils/: instance.cpp
app/src/main/cpp/rpcs3/rpcs3/Loader/: iso.cpp
app/src/main/java/aenu/aps3e/: AboutActivity.java  Application.java  DocumentsProvider.java  Emulator.java  (+5 more)
app/src/main/res/menu/: hdd0_game_options.xml  iso_game_options.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-id/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-ms/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-pt-rPT/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-th/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
(+3 files in other folders)
